--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,31 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:src="@drawable/imageback" />
+
+        <Button
+            android:id="@+id/predict"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="47dp"
+            android:layout_marginTop="301dp"
+            android:layout_marginEnd="276dp">
+
+        </Button>
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:background="#FFFFFF"
-        />
+        android:background="#FFFFFF">
+
+
+
+    </View>
+
+
+
+
 </LinearLayout>
