--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -203,7 +203,7 @@
                             <ImageView
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
-                                android:src="@drawable/analog"/>
+                                android:src="@drawable/prediction"/>
 
                             <TextView
                                 android:layout_width="match_parent"
